Fractional td width is not rendering correctly https://bugs.webkit.org/show_bug.cgi?id=234745 <rdar://problem/87162997>

Reviewed by Darin Adler.

Source/WebCore:

This is based on the following Blink commit
   https://chromium.googlesource.com/chromium/src/+/bfade5f8c943d322f5aca3ab0341824e4ae885a1

The code that ignores a width of zero was incorrectly parsing as an integer and ignoring fractional values.

Test: fast/table/table-cell-percent-width-between-0-and-1.html

* html/HTMLTableCellElement.cpp:
(WebCore::HTMLTableCellElement::collectPresentationalHintsForAttribute):

LayoutTests:

* fast/table/table-cell-percent-width-between-0-and-1-expected.html: Added.
* fast/table/table-cell-percent-width-between-0-and-1.html: Added.



Canonical link: https://commits.webkit.org/246117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288103 268f45cc-cd09-0410-ab3c-d52691b4dbfc